superbitty/tests/ui/BitFieldCompatible/structs/no_options.rs
use superbitty::BitFieldCompatible;

#[derive(BitFieldCompatible)]
struct NoOptions(u32);

fn main() {}
